# adaptive-optimization

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
_includes/: head-custom.html
assets/: a9a_comparison_table.md  mnist_comparison_table.md
benchmarks/: __init__.py  functions.py
datasets/: __init__.py  loaders.py
experiments/: __init__.py  benchmark_runner.py  compare_optimizers.py  generate_results.py  trainer.py
models/: __init__.py  base.py  logistic_regression.py  softmax_regression.py
notebooks/: 01_optimizer_fundamentals.ipynb  02_logistic_regression_a9a.ipynb  03_softmax_regression_mnist.ipynb  04_full_comparison_report.ipynb
optimizers/: __init__.py  adagrad.py  adagrad_norm.py  adam.py  base.py  gradient_descent.py  lbfgs.py  rmsprop.py  sgd.py
streamlit_app/: app.py  dashboard_utils.py
streamlit_app/sections/: about.py  benchmark_playground.py  classification_trainer.py  compare_optimizers.py
tests/: conftest.py  test_benchmarks.py  test_datasets.py  test_experiments.py  test_metrics.py  test_models.py  test_optimizers.py  test_visualization.py
utils/: __init__.py  logging_config.py  metrics.py
visualization/: __init__.py  plots.py  style.py  trajectory.py
