[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-optimization"
version = "1.0.0"
description = "First-order and adaptive optimization algorithms implemented from scratch in NumPy, with benchmark visualizations and an interactive Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[tool.setuptools]
packages = [
    "optimizers",
    "models",
    "benchmarks",
    "datasets",
    "utils",
    "experiments",
    "visualization",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]

[tool.ruff]
line-length = 115
target-version = "py312"
